# sample-todo

./: .gitignore  Cargo.toml  apm.lock.yaml  apm.yml  rust-toolchain.toml
.claude/: settings.json
.claude/agents/: docusaurus-reviewer.md  docusaurus-writer.md  engineering-code-reviewer.md  researcher.md  security-reviewer.md
.claude/skills/docusaurus-docs/: SKILL.md
.claude/skills/docusaurus-docs/assets/: docusaurus-config-example.ts  docusaurus-package-example.json  drawio-templates.md
.claude/skills/docusaurus-docs/references/: adr.md  architecture.md  bootstrap.md  database.md  drawio.md  error-codes.md  general.md  nfr.md  openapi.md  screen-doc.md  sequence.md  ubiquitous-language.md
.claude/skills/docusaurus-docs/scripts/: build-check.sh
.claude/skills/git-commitmsg/: SKILL.md
.claude/skills/git-pull-request/: SKILL.md
.claude/skills/git-setup/: SKILL.md
.claude/skills/project-planning/: SKILL.md
.claude/skills/project-planning/references/: delegation.md  orchestration.md  pr-flow.md  strategy.md
.claude/skills/rust-desktop-patterns/: SKILL.md
.claude/skills/rust-desktop-patterns/references/: architecture-selection.md  async-runtime.md  extensibility.md  gpui-fundamentals.md  realtime-collaboration.md  text-editing.md
.claude/skills/skill-router/: SKILL.md
.claude/skills/tdd-workflow/: SKILL.md
.claude/skills/tdd-workflow/references/: testing-requirements.md
src/: main.rs
