[package]
name = "sample-todo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sample-todo"
path = "src/main.rs"

[dependencies]
# gpui は crates.io に安定版が無いため git 依存。同一リビジョンに固定して再現性を担保する。
gpui = { git = "https://github.com/zed-industries/zed", rev = "d989c7c5cdd057de2375a55bdc109ff61409801c" }
# 起動エントリ application() / current_platform() は gpui_platform 側に分離されている。
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "d989c7c5cdd057de2375a55bdc109ff61409801c", features = ["font-kit", "wayland", "x11"] }
# テキスト入力のグラフェム境界処理に使用（gpui の input 例と同様）。
unicode-segmentation = "1"
